# strava2garmin

./: .gitignore  README.md  REUSE.toml  default.nix  flake.nix  garmin.py  main.py  pyproject.toml  requirements.txt  result  shell.nix  strava.py  stravalib.nix  stravaweblib.nix
.github/workflows/: snyc.yml  sync.yml
strava2garminconnect/: garmin.py  image.py  main.py  strava.py
