# SPDX-FileCopyrightText: 2024 Steffen Vogel <post@steffenvogel.de>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strava2garminconnect"
description = "Synchronize Strava activities to Garmin Connect"
version = "0.1.0"

authors = [
  {name = "Steffen Vogel", email = "post@steffenvogel.de"},
]

readme = "README.md"
license = {text = "Apache 2.0"}
keywords = ["Garmin Connect", "Strava", "Sync"]

dependencies = [
  "stravalib",
  "stravaweblib",
  "garminconnect",
  "thefuzz",
  "pillow"
]
requires-python = ">= 3.12"

[project.urls]
Repository = "https://github.com/stv0g/strava2garminconnect.git"
Issues = "https://github.com/stv0g/strava2garminconnect/issues"

[project.scripts]
strava2garminconnect = "strava2garminconnect:main.main"

[tool.setuptools]
packages = ["strava2garminconnect"]
